{
    "name": "GameControls",
    "maps": [
        {
            "name": "General",
            "id": "5111979e-b2d8-4a4b-8909-7f6a0d0cb861",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "d206b2e5-2f0f-460b-b654-8f15ee92796b",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDelta",
                    "type": "PassThrough",
                    "id": "751b21ad-e045-4945-a371-1f6e654bd684",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "bc68b127-d775-4306-93d1-7d12b562629b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "29005601-5a30-4d39-a866-a614c13a7790",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9bd8e5fd-eeaa-46d8-8822-31dccd79a76b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5a6460b9-bf49-4d68-a2d0-7d348b0eb6c3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c1554f45-b898-4ec0-8ea5-6dfbba7e3179",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0647cb89-6c05-4330-9a00-62abb6b696ed",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Ghost",
            "id": "f1e26670-698e-4eff-a582-a78cbad919e9",
            "actions": [
                {
                    "name": "GoUp",
                    "type": "PassThrough",
                    "id": "a6b83b87-4f77-4e95-a6bd-022240ac7c63",
                    "expectedControlType": "Digital",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GoDown",
                    "type": "PassThrough",
                    "id": "388f1dca-3c65-4347-83b1-55f53b61d24b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Possess",
                    "type": "Button",
                    "id": "755bca78-7415-4661-ae7d-15efbc808b36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Eject",
                    "type": "Button",
                    "id": "599b32cd-74f6-476b-8add-76ad33599e45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "654be943-34b6-4b8c-b15c-f6a7c0412ef0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9a248e5-9b2b-4f0a-8e7e-9017c751f3fd",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "525ab667-a81f-4f41-bcf4-76db24f6e360",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Possess",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "286b10c6-fd30-4611-b7d3-c1cb477a6c32",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Eject",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}